--- a/vixen/html/vixen_ui.html
+++ b/vixen/html/vixen_ui.html
@@ -163,7 +163,7 @@
     <button v-on:click="threaded(viewer, 'rescan')">Rescan</button>
     <br>
 
-    <view-directory :viewer="viewer"></view-directory>
+    <view-directory :viewer="viewer" :pager="viewer.pager"></view-directory>
 
     <div v-if="viewer.current_file" style="padding:5px;">
       <div class="tag-editor" style="float:left; padding: 5px">
@@ -222,19 +222,20 @@
       <button v-on:click="viewer.go_to_parent()">Go to Parent</button>
       <div style="height:100px; width: 300px; overflow:scroll;"
            class="resizable">
-        <div v-for="path in viewer.paths | limitBy 20 (page-1)*20">
+        <div v-for="path in pager.data | limitBy pager.limit pager.start">
           <label v-if="path.directories" style="font-weight: bold;"
-                 v-on:click="viewer.view(path)">{{path.name}}/</label>
-          <label v-else v-on:click="viewer.view(path)"
-                 v-bind:class="viewer.current_file == path ? 'selected' : ''">
+                 v-on:click="pager.select($index)">{{path.name}}/</label>
+          <label v-else v-on:click="pager.select($index)"
+                 v-bind:class="pager.selected == path ? 'selected' : ''">
             {{path.name}}
           </label>
         </div>
       </div>
-      {{viewer.current_dir.files.length}} files
-      <button v-bind:disabled="page < 2" v-on:click="prev()">Prev</button>
-      Page <input v-model="page" number> of {{total()}}
-      <button v-bind:disabled="page >= total()" v-on:click="next()">Next</button>
+      {{viewer.current_dir.files.length}} files.
+      Page {{pager.page}}
+      <input v-show="pager.total_pages > 1" v-model="pager.page"
+             type="range" min="1" v-bind:max="pager.total_pages">
+      of {{pager.total_pages}}
     </div>
   </script>
 
@@ -413,37 +414,7 @@
 
       Vue.component('view-directory', {
           template: "#view-directory-template",
-          props: ['viewer'],
-          computed: {
-              page: {
-                  get: function() {
-                      if (this.my_page < 1) {
-                          this.my_page = 1;
-                      }
-                      else if (this.my_page > this.total()) {
-                          this.my_page = this.total();
-                      }
-                      return this.my_page;
-                  },
-                  set: function(value) {
-                      this.my_page = Math.min(Math.max(1, value), this.total());
-                  }
-              }
-          },
-          data: function() {
-              return {my_page: 1};
-          },
-          methods: {
-              total : function() {
-                  return Math.round(this.viewer.paths.length/20 + 0.5);
-              },
-              next : function() {
-                  this.page += 1;
-              },
-              prev: function() {
-                  this.page -= 1;
-              },
-          }
+          props: ['viewer', 'pager'],
       });
 
       // The Vue instance.
