Save the ctime and mtime of the media.
The datetime objects are saved to make it easy to search for files in a
region.  `date` and `time` traits are removed and instead we have a
ctime and mtime string trait.  Use the `json_tricks` package to
facilitate saving the timestamps.

--- a/vixen/html/vixen_ui.html
+++ b/vixen/html/vixen_ui.html
@@ -207,9 +207,7 @@
              v-on:click="viewer.os_open(current_file.path)">
         {{current_file.name}}</label>
       <br>
-      <label> Date: </label> {{media.date}}
-      <br/>
-      <label> Time: </label> {{media.time}}
+      <label> Time: </label> {{media.mtime}}
       <br/>
       <label> Size: </label> {{(media.size/1024).toFixed(1)}} (KB)
       <br/>
