--- a/vixen/html/vixen_ui.html
+++ b/vixen/html/vixen_ui.html
@@ -136,12 +136,23 @@
     <button v-on:click="busy_call(viewer, 'rescan')">Rescan</button>
     <br>
 
+    <input v-model="viewer.search">
+    <button v-on:click="busy_call(viewer, 'do_search')">Search</button>
+    <button v-on:click="viewer.clear_search()">Clear</button>
+
+    <div v-if="viewer.search.length == 0">
     <view-directory :viewer="viewer" :pager="viewer.pager"
                     :current_dir="viewer.current_dir"></view-directory>
+    </div>
+    <div v-else>
+        <view-search-results :viewer="viewer" :pager="viewer.search_pager">
+        </view-search-results>
+    </div>
 
-    <div v-if="viewer.current_file" style="padding:5px;">
-      <edit-media :viewer="viewer" :current_file="viewer.current_file"
-                  :media="viewer.media"></edit-media>
+
+    <div v-if="viewer.current_file || (viewer.search.length > 0 && viewer.media)"
+         style="padding:5px;">
+        <edit-media :viewer="viewer" :media="viewer.media"></edit-media>
     </div>
     <div style="clear: left; padding: 10px;">
       <hr/>
@@ -162,7 +173,8 @@
     <section class="sans-third"
              style="background:#f0f0f0;box-shadow:inset 0 0 10px rgba(0,0,0,0.2)">
 
-    <div v-if="viewer.current_file" style="padding:5px;">
+        <div v-if="viewer.current_file || (viewer.search.length > 0 && viewer.media)"
+             style="padding:5px;">
           <view-media class="viewer" :media="viewer.media"></view-media>
     </div>
     </section>
@@ -199,13 +211,34 @@
     </div>
   </script>
 
+  <!-- view-search-results template -->
+  <script type="text/x-template" id="view-search-template">
+   <div>
+   <div style="height:100px; width: 300px;"
+   class="resizable directory-browser">
+   <div v-for="media in pager.data | limitBy pager.limit pager.start">
+   <label v-on:click="pager.select($index)"
+   v-bind:class="{'current-index': pager.rel_index == $index,
+                               'selected': pager.selected == media}">
+   {{media.file_name}}
+   </label>
+   </div>
+   </div>
+   Page {{pager.page}}
+   <input v-show="pager.total_pages > 1" v-model="pager.page"
+   type="range" min="1" v-bind:max="pager.total_pages">
+   of {{pager.total_pages}}
+   </div>
+  </script>
+
+
   <!-- edit-media template -->
   <script type="text/x-template" id="edit-media-template">
     <div class="tag-editor" style="float:left; padding: 5px">
       <label> Name: </label>
       <label title="Click to open with system viewer" style="color:blue;"
-             v-on:click="viewer.os_open(current_file.path)">
-        {{current_file.name}}</label>
+             v-on:click="viewer.os_open(media.path)">
+        {{media.file_name}}</label>
       <br>
       <label> Time: </label> {{media.mtime}}
       <br/>
@@ -399,9 +432,14 @@
           props: ['viewer', 'pager', 'current_dir'],
       });
 
+      Vue.component('view-search-results', {
+          template: "#view-search-template",
+          props: ['viewer', 'pager'],
+      });
+
       Vue.component('edit-media', {
           template: "#edit-media-template",
-          props: ['viewer', 'current_file', 'media'],
+          props: ['viewer', 'media'],
       });
 
       Vue.component('view-media', {
